Fixes wrapping for repo name

--- a/app/elements/repos-list/repos-list.scss
+++ b/app/elements/repos-list/repos-list.scss
@@ -148,6 +148,13 @@ paper-radio-group.yellow-white paper-radio-button[checked]::shadow #offRadio {
   text-align: left;
 }
 
+.repo-name{
+  word-wrap: break-word;
+}
+.description {
+  padding-left: 5px;
+}
+
 footer{
   width: 100%;
   padding-bottom: 10px;
@@ -165,7 +172,7 @@ a:visited {
 }
 
 a:hover {
-  background-color: #E8EAF6
+  background-color: #E8EAF6;
 }
 
 a:active {
